# pyv

./: .gitignore  CHANGELOG.md  README.md  doctor.py  installer.py  pyproject.toml  pyv.py  registry.py  updater.py  utils.py  version_manager.py
.github/workflows/: python-ci.yml
scripts/: install.sh
shims/: python
